--- a/diapos/Electrotecnia.tex
+++ b/diapos/Electrotecnia.tex
@@ -1,4 +1,4 @@
-% Created 2018-10-19 vie 15:00
+% Created 2018-10-19 vie 20:19
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -37,11 +37,11 @@
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
 \usefonttheme{serif}
-\author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
-\date{}
+\author{Oscar Perpiñán Lamigueiro}
+\date{\url{http://oscarperpinan.github.io}}
 \title{Electrotecnia}
 \hypersetup{
- pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdfauthor={Oscar Perpiñán Lamigueiro},
  pdftitle={Electrotecnia},
  pdfkeywords={},
  pdfsubject={},
@@ -52,9 +52,9 @@
 \maketitle
 
 \section{Conceptos preliminares}
-\label{sec:org479344b}
+\label{sec:org4c46145}
 
-\begin{frame}[label={sec:org1c310f8}]{Electricidad}
+\begin{frame}[label={sec:orgfcef17e}]{Electricidad}
 \begin{itemize}
 \item La electricidad es un fenómeno físico asociado al \alert{movimiento de las
 cargas eléctricas}.
@@ -68,7 +68,7 @@ Este movimiento se realiza mediante un trabajo, cuantificado por el
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgea959ed}]{Intensidad de Corriente eléctrica}
+\begin{frame}[label={sec:org95ba2cf}]{Intensidad de Corriente eléctrica}
 \begin{itemize}
 \item \alert{Variación de la carga con el tiempo en la sección transversal de un
 conductor} \(i(t)=\frac{dq(t)}{dt}\)
@@ -78,7 +78,7 @@ es positivo para el movimiento de las cargas positivas.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org260de25}]{Principio de conservación de la carga}
+\begin{frame}[label={sec:org7ecbc50}]{Principio de conservación de la carga}
 \begin{itemize}
 \item Las lineas de corriente son cerradas (o solenoidales)
 
@@ -95,7 +95,7 @@ i_1(t) - i_2(t) + i_3(t) - i_4(t) + i_5(t) = 0
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgf582130}]{Tensión. Diferencia de potencial}
+\begin{frame}[label={sec:orgbee1557}]{Tensión. Diferencia de potencial}
 \begin{itemize}
 \item \alert{Trabajo realizado al mover una carga unidad entre dos puntos}.
 \end{itemize}
@@ -114,7 +114,7 @@ escribir:
 \end{align*}
 \end{frame}
 
-\begin{frame}[label={sec:org59a9944}]{Principio de conservación de la energía}
+\begin{frame}[label={sec:orgc7427bc}]{Principio de conservación de la energía}
 \begin{itemize}
 \item La energía producida por un generador se consume por los receptores
 del circuito para producir trabajo (mecánico, químico, etc.) o
@@ -133,7 +133,7 @@ u_3(t) + u_4 (t) - u_5 (t) - u_1 (t) - u_2 (t)  = 0
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgf752aad}]{Potencia eléctrica}
+\begin{frame}[label={sec:org577f4b7}]{Potencia eléctrica}
 \begin{itemize}
 \item Trabajo realizado por unidad de tiempo
 \end{itemize}
@@ -152,7 +152,7 @@ potencia (\(p(t)>0\))
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc9fefaa}]{Potencia y Energía}
+\begin{frame}[label={sec:orga6d284f}]{Potencia y Energía}
 \begin{description}
 \item[{Energía}] es la capacidad para realizar un trabajo.
 
@@ -167,7 +167,7 @@ Unidades W, kW
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orge3ab0a7}]{Eficiencia y Rendimiento}
+\begin{frame}[label={sec:org3c819f9}]{Eficiencia y Rendimiento}
 \begin{description}
 \item[{Eficiencia}] de un proceso es la relación entre la \emph{potencia} de
 salida y la \emph{potencia} de entrada a ese proceso.
@@ -178,11 +178,11 @@ salida y la \emph{energía} de entrada a ese proceso.
 \end{frame}
 
 \section{Elementos del Circuito}
-\label{sec:org7d30c6e}
+\label{sec:orgf782fde}
 \subsection{Elementos Lineales}
-\label{sec:org3a442c5}
+\label{sec:orgefa1ccd}
 
-\begin{frame}[label={sec:org2595db3}]{Generadores}
+\begin{frame}[label={sec:org2f0533d}]{Generadores}
 \begin{itemize}
 \item \alert{Generador de tensión}: su tensión es independiente de la corriente
 (la corriente la fija el circuito)
@@ -210,7 +210,7 @@ salida y la \emph{energía} de entrada a ese proceso.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf24258a}]{Resistencia}
+\begin{frame}[label={sec:orgef25b63}]{Resistencia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Resistencia.pdf}
 \end{center}
@@ -231,7 +231,7 @@ longitud: \(R=\rho\cdot\frac{L}{S}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org31ad3de}]{Resistencia}
+\begin{frame}[label={sec:org3bd2c6f}]{Resistencia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Resistencia.pdf}
 \end{center}
@@ -252,7 +252,7 @@ p(t)=R\cdot i^{2}(t)
 \end{frame}
 
 
-\begin{frame}[label={sec:org413047a}]{Bobina o inductancia}
+\begin{frame}[label={sec:org0dc51ad}]{Bobina o inductancia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Bobina.pdf}
 \end{center}
@@ -272,7 +272,7 @@ v(t)=L\cdot\frac{di(t)}{dt}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org5f8c538}]{Bobina o inductancia}
+\begin{frame}[label={sec:org547bbf2}]{Bobina o inductancia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Bobina.pdf}
 \end{center}
@@ -288,7 +288,7 @@ tensión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1ca74ed}]{Condensador}
+\begin{frame}[label={sec:org43aab33}]{Condensador}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Condensador.pdf}
 \end{center}
@@ -315,7 +315,7 @@ i(t)=\frac{dq(t)}{d(t)}=C\frac{du(t)}{dt}
 \end{frame}
 
 
-\begin{frame}[label={sec:org7479238}]{Condensador}
+\begin{frame}[label={sec:org94882b3}]{Condensador}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Condensador.pdf}
 \end{center}
@@ -331,9 +331,9 @@ abierto.
 \end{frame}
 
 \subsection{Elementos No Lineales}
-\label{sec:org4346416}
+\label{sec:orgafa730a}
 
-\begin{frame}[label={sec:org9db15fb}]{Diodo}
+\begin{frame}[label={sec:org8cf424f}]{Diodo}
 \begin{center}
 \includegraphics[height=0.15\textheight]{../figs/Diodo.pdf}
 \end{center}
@@ -348,7 +348,7 @@ corriente a través de él a partir de una tensión de polarización.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1c86706}]{Diodo}
+\begin{frame}[label={sec:orgfec8928}]{Diodo}
 \begin{center}
 \includegraphics[height=0.15\textheight]{../figs/Diodo.pdf}
 \end{center}
@@ -366,7 +366,7 @@ del circuito en ciertas condiciones)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org76c3191}]{Transistor}
+\begin{frame}[label={sec:org3e12b06}]{Transistor}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/Transistor.pdf}
 \end{center}
@@ -383,7 +383,7 @@ tercer terminal está polarizado adecuadamente.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgfdc0618}]{Transistor}
+\begin{frame}[label={sec:org5c0b312}]{Transistor}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/Transistor.pdf}
 \end{center}
@@ -400,9 +400,9 @@ control es reproducida en la salida con mayor amplitud)
 \end{frame}
 
 \subsection{Asociación de elementos pasivos}
-\label{sec:orgd01fb60}
+\label{sec:org595dcf8}
 
-\begin{frame}[label={sec:org83d4fe7}]{Conexión en serie}
+\begin{frame}[label={sec:org29c6177}]{Conexión en serie}
 \begin{block}{Misma corriente por todos los elementos: la tensión se reparte}
 \(R_{s}=\sum_{i}R_{i}\)
 
@@ -415,7 +415,7 @@ control es reproducida en la salida con mayor amplitud)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org6ae6d25}]{Conexión en paralelo}
+\begin{frame}[label={sec:org72dfe85}]{Conexión en paralelo}
 \begin{block}{Misma tensión aplicada a todos los elementos: la corriente se reparte}
 \(\frac{1}{R_{p}}=\sum_{i}\frac{1}{R_{i}}\)
 
@@ -428,13 +428,14 @@ control es reproducida en la salida con mayor amplitud)
 \end{block}
 \end{frame}
 
+
 \section{Corriente alterna sinusoidal}
-\label{sec:orgdc649b5}
+\label{sec:orga54e95a}
 
 \subsection{Conceptos Fundamentales}
-\label{sec:orgea9fc93}
+\label{sec:orgd3e5897}
 
-\begin{frame}[label={sec:org511a571}]{Onda sinusoidal}
+\begin{frame}[label={sec:orgd2f6ee5}]{Onda sinusoidal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/sin.pdf}
 \end{center}
@@ -456,7 +457,7 @@ y(t)=Y_{o}\cdot\sin(\omega\cdot t+\theta)
 \end{frame}
 
 
-\begin{frame}[label={sec:orgde63a88}]{Fase}
+\begin{frame}[label={sec:orgd709414}]{Fase}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/desfase.pdf}
 \end{center}
@@ -482,7 +483,7 @@ respecto a la referencia.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf58b8f9}]{Señales en Cuadratura}
+\begin{frame}[label={sec:org3a5af42}]{Señales en Cuadratura}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/cuadratura.pdf}
 \end{center}
@@ -494,7 +495,7 @@ respecto a la referencia.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdfad6bc}]{Valor medio y valor eficaz}
+\begin{frame}[label={sec:orga693648}]{Valor medio y valor eficaz}
 \begin{block}{Valor medio}
 \[
 Y_m=\frac{1}{T}\int_{0}^{T}y(t)
@@ -515,14 +516,13 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \end{block}
 \end{frame}
 \subsection{Cálculo Fasorial}
-\label{sec:org1ad8285}
+\label{sec:org66ff445}
 
-\begin{frame}[label={sec:org68db3d8}]{Representación fasorial}
+\begin{frame}[label={sec:org1eaaf2a}]{Representación fasorial}
 \begin{itemize}
-\item Para evitar el cálculo con funciones sinusoidales se recurre a una transformación: \alert{fasores}.
-\item Un fasor es un \alert{número complejo} que representa una señal sinusoidal.
-\item El \alert{módulo} del fasor es el \alert{valor eficaz}, y el \alert{argumento} es la \alert{fase}.
-\item No se puede emplear cuando hay frecuencias diferentes en un mismo circuito.
+\item Un fasor es un \alert{número complejo} que representa una señal sinusoidal para simplificar cálculos.
+\item El \alert{módulo} del fasor es el \alert{valor eficaz}. El \alert{argumento} es la \alert{fase}.
+\item Descartamos pulsación: No se puede emplear cuando hay frecuencias diferentes en un mismo circuito.
 \end{itemize}
 
 \begin{columns}
@@ -536,15 +536,16 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 
 \begin{column}{0.5\columnwidth}
 \begin{center}
-\includegraphics[height=0.3\textheight]{../figs/Fasor.pdf}
+\includegraphics[height=0.45\textheight]{../figs/fasor.pdf}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgdeaab81}]{Impedancia}
+
+\begin{frame}[label={sec:org3d3542c}]{Impedancia}
 \begin{columns}
-\begin{column}{0.6\columnwidth}
+\begin{column}{0.4\columnwidth}
 \begin{align*}
   \overline{I} &= I\phase{\theta_I}\\
   \overline{U} &= U\phase{\theta_U}
@@ -564,46 +565,68 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \]
 \end{column}
 
-\begin{column}{0.4\columnwidth}
+\begin{column}{0.6\columnwidth}
 \begin{center}
-\includegraphics[height=0.4\textheight]{../figs/Impedancia.pdf}
+\includegraphics[height=0.5\textheight]{../figs/Impedancia.pdf}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgab2040d}]{Impedancia de los Elementos}
-\begin{itemize}
-\item Resistencia
-\end{itemize}
+\begin{frame}[label={sec:orgb1996ca}]{Impedancia de los Elementos: Resistencia}
 \[
 \overline{Z}_R = R = R\phase{0}
 \]
 
-\begin{itemize}
-\item Inductancia
-\end{itemize}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/fasorResistencia.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orgf861eb1}]{Impedancia de los Elementos: Inductancia}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
 \[
 \overline{Z}_L = j\omega L = \omega L \phase{\ang{90}} \Rightarrow X_L = \omega L
 \]
+\end{column}
 
-\begin{itemize}
-\item Condensador
-\end{itemize}
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/fasorInductancia.pdf}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}[label={sec:org4c5ef10}]{Impedancia de los Elementos: Condensador}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
 \[
 \overline{Z}_C = \frac{1}{j\omega C} = \frac{1}{\omega C}\phase{\ang{-90}} \Rightarrow X_C = \frac{1}{\omega C}
 \]
+\end{column}
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/fasorCondensador.pdf}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
 
-\begin{itemize}
-\item Genérica
-\end{itemize}
+\begin{frame}[label={sec:orga9eb4ec}]{Impedancia Genérica}
 \[
 \overline{Z} = R + j X
 \]
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/fasorImpedancia.pdf}
+\end{center}
 \end{frame}
 
-
-\begin{frame}[label={sec:orga4badaa}]{Convenio de signos para Desfase}
+\subsection{Desfase Tensión - Corriente}
+\label{sec:org195ad6f}
+\begin{frame}[label={sec:org728b45f}]{Convenio de signos para Desfase}
 \begin{itemize}
 \item En general, la tensión es origen de fases (\(\theta_{V}=0\)).
 \end{itemize}
@@ -621,7 +644,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \end{align*}
 \end{frame}
 
-\begin{frame}[label={sec:org040645f}]{Circuito Resistivo}
+\begin{frame}[label={sec:orgfd21745}]{Circuito Resistivo}
 \[
 \overline{Z}_R = R = R \phase{0}
 \]
@@ -633,7 +656,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 Un circuito resistivo no desfasa (\alert{tensión y corriente en fase}).
 \end{frame}
 
-\begin{frame}[label={sec:orgba93d71}]{Circuito Inductivo puro}
+\begin{frame}[label={sec:org233a2ab}]{Circuito Inductivo puro}
 \[
 \overline{Z}_L = j\omega L = \omega L \phase{\ang{90}}
 \]
@@ -645,7 +668,7 @@ Un circuito resistivo no desfasa (\alert{tensión y corriente en fase}).
 Un circuito inductivo puro genera \alert{señales en cuadratura} y \alert{retrasa la corriente}.
 \end{frame}
 
-\begin{frame}[label={sec:org2a97233}]{Circuito Capacitivo puro}
+\begin{frame}[label={sec:org2f016b5}]{Circuito Capacitivo puro}
 \[
 \overline{Z}_C = \frac{1}{j\omega C} = \frac{1}{\omega C}\phase{\ang{-90}}
 \]
@@ -658,7 +681,7 @@ Un circuito inductivo puro genera \alert{señales en cuadratura} y \alert{retras
 Un circuito capacitivo puro genera \alert{señales en cuadratura} y \alert{adelanta la corriente}.
 \end{frame}
 
-\begin{frame}[label={sec:org2171cc1}]{Circuito Inductivo}
+\begin{frame}[label={sec:org21ad8c7}]{Circuito Inductivo con pérdidas}
 \[
 \overline{Z} = R + j\omega L \Rightarrow \theta > 0
 \]
@@ -670,7 +693,7 @@ Un circuito capacitivo puro genera \alert{señales en cuadratura} y \alert{adela
 Un circuito inductivo \alert{retrasa la corriente}.
 \end{frame}
 
-\begin{frame}[label={sec:org44a91d4}]{Circuito Capacitivo}
+\begin{frame}[label={sec:orgdbe384b}]{Circuito Capacitivo con pérdidas}
 \[
 \overline{Z} = R - \frac{j}{\omega C} \Rightarrow \theta < 0
 \]
@@ -683,9 +706,9 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{frame}
 
 \subsection{Potencia}
-\label{sec:orgb78f3f1}
+\label{sec:org58f09e6}
 
-\begin{frame}[label={sec:org7742138}]{Circuito Resistivo}
+\begin{frame}[label={sec:orgd53c9fd}]{Circuito Resistivo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/resistivoPotencia.pdf}
 \end{center}
@@ -698,7 +721,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
   p(t) = R i^2(t) = \frac{u^2(t)}{R}
 \]
 \end{frame}
-\begin{frame}[label={sec:org37be867}]{Circuito Inductivo puro}
+\begin{frame}[label={sec:org3a8027c}]{Circuito Inductivo puro}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/inductivoPuroPotencia.pdf}
 \end{center}
@@ -711,7 +734,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{frame}
 
 
-\begin{frame}[label={sec:org975c75f}]{Circuito Capacitivo puro}
+\begin{frame}[label={sec:org39b336e}]{Circuito Capacitivo puro}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/capacitivoPuroPotencia.pdf}
 \end{center}
@@ -723,7 +746,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9487363}]{Circuito Inductivo}
+\begin{frame}[label={sec:org36ed404}]{Circuito Inductivo con pérdidas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/inductivoPotencia.pdf}
 \end{center}
@@ -733,7 +756,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc2d247f}]{Circuito Capacitivo}
+\begin{frame}[label={sec:org8aa114c}]{Circuito Capacitivo con pérdidas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/capacitivoPotencia.pdf}
 \end{center}
@@ -743,27 +766,46 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb1a2c18}]{Triángulo de Potencias}
-\begin{block}{Potencia Activa}
+\begin{frame}[label={sec:org9e93ed1}]{Triángulo de Potencias}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{itemize}
+\item Potencia Activa
+\end{itemize}
 \[  
 P = U\cdot I\cdot\cos(\theta) = R \cdot I^2
 \]
-\end{block}
 
-\begin{block}{Potencia Reactiva}
+\begin{itemize}
+\item Potencia Reactiva
+\end{itemize}
 \[
 Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \]
-\end{block}
 
-\begin{block}{Potencia Aparente}
+\begin{itemize}
+\item Potencia Aparente
+\end{itemize}
 \[
 \overline{S} = P + jQ = \overline{U} \cdot \overline{I}^*
 \]
-\end{block}
+\[
+|S| = U \cdot I
+\]
+\[
+\theta_S = \theta_Z = \theta
+\]
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/trianguloPotencias.pdf}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org2efea8a}]{Potencia de elementos: Resistencia}
+\begin{frame}[label={sec:org1211e79}]{Potencia de elementos: Resistencia}
 \[
 \theta = 0 \Rightarrow 
 \begin{cases}
@@ -779,7 +821,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org66d3a3e}]{Potencia de elementos: Inductancia}
+\begin{frame}[label={sec:org4bbc627}]{Potencia de elementos: Inductancia}
 \[
 \theta = \pi/2 \Rightarrow 
 \begin{cases}
@@ -795,7 +837,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4db0234}]{Potencia de elementos: Condensador}
+\begin{frame}[label={sec:orgb4a9dc4}]{Potencia de elementos: Condensador}
 \[
 \theta = - \pi/2 \Rightarrow 
 \begin{cases}
@@ -811,52 +853,89 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgce2c715}]{Teorema de Boucherot}
-\end{frame}
-
-\begin{frame}[label={sec:org3546723}]{Compensación de reactiva}
+\begin{frame}[label={sec:org1230bd3}]{Teorema de Boucherot}
 \begin{itemize}
-\item El factor de potencia (\(\cos(\theta)\)) representa la aportación de potencia activa dentro de la potencia aparente.
-
-\item Suponiendo tensión constante, la corriente que debe circular es
-\(I=\frac{S}{V}=\frac{P}{V\cdot\cos(\theta)}\).
-
-\item Para alimentar una potencia activa determinada, \alert{la corriente es
-tanto más alta cuanto menor el factor de potencia}.
-
-\item \alert{Factores de potencia bajos} obligan a
+\item En un circuito con múltiples elementos, la potencia aparente total es la suma de las potencias aparentes individuales.
+\end{itemize}
+\begin{align*}
+  \overline{S} &= \sum_{i = 1}^{n} S_i\\
+  P + jQ &= \sum^n_{i = 1} (P_i + jQ_i)
+\end{align*}
 
 \begin{itemize}
-\item Utilizar \alert{grandes secciones} de cable para transportar la misma
-potencia activa
+\item La potencia activa (reactiva) total es la suma de las potencias activas (reactivas) individuales.
+\end{itemize}
 
-\item Generar \alert{mayor potencia aparente} para alimentar la misma potencia
-activa
-\end{itemize}
-\end{itemize}
+\begin{align*}
+P &= \sum_{i = 1}^n P_i\\
+Q &= \sum_{i = 1}^n Q_i
+\end{align*}
 \end{frame}
 
-\begin{frame}[label={sec:org0c36b9d}]{Compensación de reactiva}
+\begin{frame}[label={sec:orgd7cb2c0}]{Compensación de reactiva}
+\begin{itemize}
+\item El factor de potencia, \(\cos(\theta)\), representa la aportación de potencia activa dentro de la potencia aparente.
+\end{itemize}
+\[
+P = S \cos \theta
+\]
+
+\begin{itemize}
+\item Sean dos sistemas con misma tensión y potencia activa, y factores de potencia \(\cos \theta_1 > \cos \theta_2\).
+
+\item El sistema 2 requiere \alert{mayor sección} de cable para transportar la misma potencia activa.
+\end{itemize}
+\[
+  \left(\frac{P}{U \cos \theta_1} = I_1 \right) < \left( I_2 = \frac{P}{U \cos \theta_2}\right) 
+\]
+\begin{itemize}
+\item El sistema 2 requiere \alert{mayor potencia aparente} (generador mayor) para alimentar la misma potencia activa.
+\end{itemize}
+\[
+  \left(\frac{P}{\cos \theta_1} = S_1 \right) < \left( S_2 = \frac{P}{\cos \theta_2}\right) 
+\]
+\end{frame}
+
+\begin{frame}[label={sec:org30e5824}]{Compensación de reactiva}
 \begin{itemize}
 \item Comúnmente, el factor de potencia es \alert{inductivo} (máquinas eléctricas
 industriales).
 
-\item La red debe suministrar potencia reactiva inductiva (problemas
-derivados de bajo factor de potencia)
+\item La red debe suministrar potencia reactiva inductiva (influye en secciones de líneas y tamaños de generadores)
 
-\item Es necesario alterar localmente el factor de potencia:
-
-\begin{itemize}
-\item Solución común: utilizar \alert{bancos de condensadores} como
-suministradores de potencia reactiva.
-\end{itemize}
+\item Es necesario mejorar \alert{localmente} el factor de potencia. Solución
+común: utilizar \alert{bancos de condensadores} como suministradores de
+potencia reactiva.
 \end{itemize}
 \end{frame}
 
-\subsection{Trifásica}
-\label{sec:org3f5470d}
+\begin{frame}[label={sec:org86b3523}]{Compensación de reactiva}
+\begin{itemize}
+\item Sea una carga de potencia activa \(P\) y potencia reactiva \(Q\). Supongamos que se desea mejorar el factor de potencia a \(\cos \theta' > \cos \theta\):
+\end{itemize}
 
-\begin{frame}[label={sec:orgcadea66}]{Motivación de los sistemas trifásicos}
+\[
+  Q' = P \tan \theta'
+\]
+
+\[
+  Q_c = Q - Q' = P \tan \theta - P \tan \theta'
+\]
+
+\[
+  Q_c = \omega C U^2
+\]
+
+\[
+C = \frac{P (\tan \theta - \tan \theta')}{\omega U^2}
+\]
+\end{frame}
+
+
+\subsection{Trifásica}
+\label{sec:org4692e3c}
+
+\begin{frame}[label={sec:org49e3fab}]{Motivación de los sistemas trifásicos}
 \begin{itemize}
 \item La potencia instantánea de un sistema monofásico es pulsante. En un
 sistema trifásico la potencia instantánea es constante, evitando
@@ -867,15 +946,28 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb63a968}]{Generación de un sistema trifásico}
+\begin{frame}[label={sec:orgd6594c9}]{Generación de un sistema trifásico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TensionesTrifasica.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgeb7faef}]{Fase y línea}
+\begin{frame}[label={sec:org798b9e3}]{Receptores}
+\begin{itemize}
+\item \alert{Tensión simple o de fase}: la existente entre una fase y el neutro.
+\item \alert{Tensión compuesta o de línea} (por defecto): la existente entre dos fases.
+\item Un receptor puede estar conectado en \alert{estrella} (punto común) o en \alert{triángulo}.
+\item Un receptor puede ser \alert{equilibrado} (las tres impedancias que lo componen son idénticas) o \alert{desequilibrado}.
+\item Cuando el receptor es equilibrado la corriente que circula por el neutro es nula.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org150d2da}]{Fase y línea}
 \begin{block}{Receptor en Estrella (cuatro hilos, 3F+1N)}
-\(V_{L}=\sqrt{3}\cdot V_{F}\) \(I_{F}=I_{L}\)
+\(V_{L}=\sqrt{3}\cdot V_{F}\) 
+
+\(I_{F}=I_{L}\)
+
 \(P=3\cdot V_{F}I_{F}\cos(\theta)=\sqrt{3}V_{L}I_{L}\cos(\theta)\)
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RedTrifasicaEstrella.pdf}
@@ -883,9 +975,12 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgc221e49}]{Fase y línea}
+\begin{frame}[label={sec:org1a2dda4}]{Fase y línea}
 \begin{block}{Receptor en Estrella (cuatro hilos, 3F+1N)}
-\(V_{L}=\sqrt{3}\cdot V_{F}\) \(I_{F}=I_{L}\)
+\(V_{L}=\sqrt{3}\cdot V_{F}\) 
+
+\(I_{F}=I_{L}\)
+
 \(P=3\cdot V_{F}I_{F}\cos(\theta)=\sqrt{3}V_{L}I_{L}\cos(\theta)\)
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RedTrifasicaEstrella_CargaMonofasica.pdf}
@@ -893,9 +988,12 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org37f5340}]{Fase y línea}
+\begin{frame}[label={sec:org2d149f6}]{Fase y línea}
 \begin{block}{Receptor en Triangulo (tres hilos, 3F)}
-\(V_{L}=V_{F}\) \(I_{F}=\frac{I_{L}}{\sqrt{3}}\)
+\(V_{L}=V_{F}\) 
+
+\(I_{F}=\frac{I_{L}}{\sqrt{3}}\)
+
 \(P=3\cdot V_{F}\cdot I_{F}\cos(\theta)=\sqrt{3}V_{L}I_{L}\cos(\theta)\)
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RedTrifasicaEstrella_CargaTriangulo.pdf}
@@ -903,21 +1001,18 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org712e125}]{Fase y línea}
-\begin{block}{Receptor en Triangulo (tres hilos, 3F)}
-\(V_{L}=V_{F}\) \(I_{F}=\frac{I_{L}}{\sqrt{3}}\)
-\(P=3\cdot V_{F}\cdot I_{F}\cos(\theta)=\sqrt{3}V_{L}I_{L}\cos(\theta)\)
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/RedTrifasicaTriangulo.pdf}
-\end{center}
-\end{block}
+\begin{frame}[label={sec:orga9cdc11}]{Compensación de Reactiva}
+Para mejorar el factor de potencia en un sistema trifásico equilibrado se deben emplear \alert{tres condensadores conectados en triángulo}:
+
+\[
+  C_\triangle = \frac{P(\tan \theta - \tan \theta')}{3\omega U^2}
+\]
 \end{frame}
 
-
 \section{Recursos}
-\label{sec:orgf665bd4}
+\label{sec:orgdb13210}
 
-\begin{frame}[label={sec:org2ac7816}]{Bibliografía}
+\begin{frame}[label={sec:org11c94df}]{Bibliografía}
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Circuitos Eléctricos}. Ed. Prentice Hall.
 
